@@ -1,3 +1,8 @@
+2006-05-14  Marek Safar  <marek.safar@seznam.cz>
+
+	* ecore.cs (Expression.ResolveAsTypeTerminal): Fixed type in the obsolete
+	error message.
+
 2006-05-11  Raja R Harinath  <rharinath@novell.com>
 
 	* flowanalysis.cs (UsageVector.MergeJumpOrigins): Kill.
